--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -20,7 +20,7 @@
 .footer-logo {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: leftr;
 }
 
 .footer-logo h2 {
@@ -30,7 +30,7 @@
 }
 
 .footer-logo-img {
-  max-width: 150px;
+  max-width: 160px;
   height: auto;
   margin-bottom: 20px;
 }
@@ -244,6 +244,7 @@
   .footer-logo {
     order: -1;
     grid-column: 1 / -1;
+    align-items: center;
   }
 
   .subscribe-section {
